--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="engine.cpp">
+    <ClCompile Include="Central\engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="engine.h">
+    <ClInclude Include="Central\engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
