--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Central\engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics\Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Central\engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
