--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Graphics\Sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Central\Input.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Central\engine.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics\Sprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Central\Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
