--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
@@ -168,12 +168,14 @@
   <ItemGroup>
     <ClCompile Include="Central\engine.cpp" />
     <ClCompile Include="Central\Input.cpp" />
+    <ClCompile Include="Central\Time.cpp" />
     <ClCompile Include="Graphics\Sprite.cpp" />
     <ClCompile Include="Graphics\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Central\engine.h" />
     <ClInclude Include="Central\Input.h" />
+    <ClInclude Include="Central\Time.h" />
     <ClInclude Include="Graphics\Sprite.h" />
     <ClInclude Include="Graphics\Window.h" />
   </ItemGroup>
