Added Text support
engine supports text now. YAY!

--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="Central\Input.cpp" />
     <ClCompile Include="Central\Time.cpp" />
     <ClCompile Include="Graphics\Sprite.cpp" />
+    <ClCompile Include="Graphics\Text.cpp" />
     <ClCompile Include="Graphics\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +178,7 @@
     <ClInclude Include="Central\Input.h" />
     <ClInclude Include="Central\Time.h" />
     <ClInclude Include="Graphics\Sprite.h" />
+    <ClInclude Include="Graphics\Text.h" />
     <ClInclude Include="Graphics\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
