--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
@@ -169,9 +169,11 @@
     <ClCompile Include="Central\engine.cpp" />
     <ClCompile Include="Central\InputHelper.cpp" />
     <ClCompile Include="Central\Time.cpp" />
+    <ClCompile Include="Graphics\RenderSystem.cpp" />
     <ClCompile Include="Graphics\SpriteComponent.cpp" />
     <ClCompile Include="Graphics\Sprite.cpp" />
     <ClCompile Include="Graphics\Text.cpp" />
+    <ClCompile Include="Graphics\TextComponent.cpp" />
     <ClCompile Include="Graphics\TextureManager.cpp" />
     <ClCompile Include="Graphics\Window.cpp" />
     <ClCompile Include="Patterns\ECS\ISystem.cpp" />
@@ -180,9 +182,11 @@
     <ClInclude Include="Central\engine.h" />
     <ClInclude Include="Central\InputHelper.h" />
     <ClInclude Include="Central\Time.h" />
+    <ClInclude Include="Graphics\RenderSystem.h" />
     <ClInclude Include="Graphics\SpriteComponent.h" />
     <ClInclude Include="Graphics\Sprite.h" />
     <ClInclude Include="Graphics\Text.h" />
+    <ClInclude Include="Graphics\TextComponent.h" />
     <ClInclude Include="Graphics\TextureManager.h" />
     <ClInclude Include="Graphics\Window.h" />
     <ClInclude Include="Patterns\ECS\Entity.h" />
