You get not points via the event manager on destroying asteroids

--- a/UrsusEngine/SampleGame/SampleGame.vcxproj
+++ b/UrsusEngine/SampleGame/SampleGame.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="PlayerComponent.h" />
     <ClInclude Include="PlayerSystem.h" />
     <ClInclude Include="ScoreComponent.h" />
+    <ClInclude Include="ScoreEvent.h" />
     <ClInclude Include="ScoreSystem.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
