--- a/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
+++ b/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="ScoreSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScoreEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
