--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj
@@ -167,6 +167,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Central\engine.cpp" />
+    <ClCompile Include="Central\EventManager.cpp" />
     <ClCompile Include="Central\InputHelper.cpp" />
     <ClCompile Include="Central\Time.cpp" />
     <ClCompile Include="Graphics\RenderSystem.cpp" />
@@ -179,6 +180,7 @@
   <ItemGroup>
     <ClInclude Include="Central\engine.h" />
     <ClInclude Include="Central\EngineAssert.h" />
+    <ClInclude Include="Central\EventManager.h" />
     <ClInclude Include="Central\InputHelper.h" />
     <ClInclude Include="Central\Time.h" />
     <ClInclude Include="Graphics\RenderSystem.h" />
