--- a/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
+++ b/UrsusEngine/UrsusEngine/UrsusEngine.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Central\EventManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Central\LevelComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Central\engine.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Central\EventManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Central\LevelComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
