--- a/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
+++ b/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ScoreSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MapSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScoreEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MapSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
