--- a/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
+++ b/UrsusEngine/SampleGame/SampleGame.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="MapSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemySystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utils.h">
@@ -81,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MapSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemySystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
