--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,8 @@ x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/
+#Not my assets, where given by the tutor during the elective!
+#[Bb]in/
 [Oo]bj/
 [Ll]og/
 [Tt]emp/
