--- a/UrsusEngine/tmxlite/tmxlite.vcxproj
+++ b/UrsusEngine/tmxlite/tmxlite.vcxproj
@@ -124,34 +124,34 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugShared|Win32'">
     <TargetName>lib$(ProjectName)-d</TargetName>
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugStatic|Win32'">
     <TargetName>lib$(ProjectName)-s-d</TargetName>
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseShared|Win32'">
     <TargetName>lib$(ProjectName)</TargetName>
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseStatic|Win32'">
     <TargetName>lib$(ProjectName)-s</TargetName>
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugShared|x64'">
     <TargetName>lib$(ProjectName)-d</TargetName>
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugStatic|x64'">
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
     <TargetName>lib$(ProjectName)-s-d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseShared|x64'">
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
     <TargetName>lib$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseStatic|x64'">
-    <OutDir>$(ProjectDir)$(Platform)\bin\</OutDir>
+    <OutDir>..\bin</OutDir>
     <TargetName>lib$(ProjectName)-s</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugStatic|Win32'">
